[gd_scene load_steps=26 format=2]

[ext_resource path="res://t_data/data.hterrain" type="Resource" id=1]
[ext_resource path="res://addons/zylann.hterrain/hterrain.gd" type="Script" id=2]
[ext_resource path="res://addons/zylann.hterrain/hterrain_texture_set.gd" type="Script" id=3]
[ext_resource path="res://TerrainTextures/HeightmapTest_slot3_albedo_bump.packed_tex" type="Texture" id=4]
[ext_resource path="res://TerrainTextures/HeightmapTest_slot1_normal_roughness.packed_tex" type="Texture" id=5]
[ext_resource path="res://TerrainTextures/HeightmapTest_slot3_normal_roughness.packed_tex" type="Texture" id=6]
[ext_resource path="res://TerrainTextures/HeightmapTest_slot2_normal_roughness.packed_tex" type="Texture" id=7]
[ext_resource path="res://TerrainTextures/HeightmapTest_slot0_albedo_bump.packed_tex" type="Texture" id=8]
[ext_resource path="res://TerrainTextures/HeightmapTest_slot1_albedo_bump.packed_tex" type="Texture" id=9]
[ext_resource path="res://TerrainTextures/HeightmapTest_slot2_albedo_bump.packed_tex" type="Texture" id=10]
[ext_resource path="res://TerrainTextures/HeightmapTest_slot0_normal_roughness.packed_tex" type="Texture" id=11]
[ext_resource path="res://scripts/HeightmapTest.gd" type="Script" id=12]
[ext_resource path="res://scripts/BubbleManager.gd" type="Script" id=13]
[ext_resource path="res://assets/GreenCanister.tscn" type="PackedScene" id=14]
[ext_resource path="res://scripts/GreenCounter.gd" type="Script" id=15]
[ext_resource path="res://assets/GreenMarker.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/AudioManager.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/BlueCanister.tscn" type="PackedScene" id=18]
[ext_resource path="res://scripts/BlueCounter.gd" type="Script" id=19]
[ext_resource path="res://sounds/jingle.wav" type="AudioStream" id=20]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
tonemap_mode = 3

[sub_resource type="Resource" id=3]
script = ExtResource( 3 )
mode = 0
textures = [ [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 4 ) ], [ ExtResource( 11 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ) ] ]

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
params_blend_mode = 2
params_cull_mode = 2
albedo_color = Color( 0.682353, 0.882353, 1, 1 )

[sub_resource type="SphereMesh" id=5]
material = SubResource( 4 )

[node name="HeightmapTest" type="Spatial"]
script = ExtResource( 12 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.975362, 0.220612, 0, -0.220612, -0.975362, 0, 0, 0 )
light_color = Color( 1, 0.968627, 0.611765, 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="HTerrain" type="Spatial" parent="."]
script = ExtResource( 2 )
ambient_wind = 0.0
lod_scale = 2.0
map_scale = Vector3( 1, 1, 1 )
_terrain_data = ExtResource( 1 )
chunk_size = 32
collision_enabled = true
collision_layer = 1
collision_mask = 1
shader_type = "Classic4"
custom_shader = null
custom_globalmap_shader = null
texture_set = SubResource( 3 )
shader_params/u_ground_uv_scale_per_texture = Plane( 20, 20, 20, 20 )
shader_params/u_depth_blending = true
shader_params/u_triplanar = false
shader_params/u_tile_reduction = Plane( 1, 1, 1, 1 )
shader_params/u_globalmap_blend_start = null
shader_params/u_globalmap_blend_distance = null
shader_params/u_colormap_opacity_per_texture = Plane( 1, 1, 1, 1 )

[node name="Player1Pos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 293.285, 73.6068, 237.29 )

[node name="Player2Pos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 301.882, 70.5084, 253.911 )

[node name="GreenCanister" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 312.612, 73.2446, 247.963 )

[node name="GreenCanister2" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 312.612, 76.4687, 237.159 )

[node name="GreenCanister3" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 320.091, 71.0501, 257.511 )

[node name="GreenCanister4" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 322.013, 75.2842, 240.998 )

[node name="GreenCanister5" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 312.612, 77.3881, 225.529 )

[node name="Control" type="Control" parent="."]
margin_right = 1026.0
margin_bottom = 597.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreenCounter" type="Label" parent="Control"]
margin_left = 919.408
margin_top = 3.5636
margin_right = 1020.41
margin_bottom = 76.5636
text = "Test"
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickupSound" type="AudioStreamPlayer" parent="Control/GreenCounter"]
stream = ExtResource( 20 )

[node name="Control2" type="Control" parent="."]
margin_right = 1026.0
margin_bottom = 597.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlueCounter" type="Label" parent="Control2"]
margin_left = 920.408
margin_top = 24.5636
margin_right = 1021.41
margin_bottom = 97.5636
text = "Test"
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickupSound" type="AudioStreamPlayer" parent="Control2/BlueCounter"]
stream = ExtResource( 20 )

[node name="GreenMarker" parent="." instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 309.037, 68.3295, 259.088 )
markerSound = "Bass"

[node name="GreenMarker2" parent="." instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 314.773, 68.3295, 268.851 )
markerSound = "Melody"

[node name="GreenMarker3" parent="." instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 298.28, 65.4353, 259.088 )
markerSound = "Harmony"

[node name="GreenMarker4" parent="." instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 304.117, 72.6046, 241.609 )
markerSound = "Percussion"

[node name="GreenMarker5" parent="." instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 303.878, 69.0093, 250.733 )
markerSound = "Other"

[node name="AudioManager" parent="." instance=ExtResource( 17 )]

[node name="BlueCanister" parent="." instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 290.873, 71.2734, 220.036 )

[node name="BlueCanister15" parent="." instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 285.642, 70.2361, 221.753 )

[node name="BlueCanister14" parent="." instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 297.59, 73.3019, 220.615 )

[node name="BlueCanister13" parent="." instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 294.742, 72.8683, 226.111 )

[node name="BlueCanister12" parent="." instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 290.324, 71.3256, 231.764 )

[node name="BlueCanister11" parent="." instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 292.117, 69.9514, 214.139 )

[node name="BlueCanister10" parent="." instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 310.757, 76.8614, 218.988 )

[node name="BlueCanister9" parent="." instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 299.603, 72.0845, 211.856 )

[node name="BlueCanister8" parent="." instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 301.569, 74.1366, 219.472 )

[node name="BlueCanister7" parent="." instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 301.965, 73.828, 226.234 )

[node name="BlueCanister6" parent="." instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 294.777, 72.8683, 236.373 )

[node name="BlueCanister5" parent="." instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 294.499, 72.8683, 217.722 )

[node name="BlueCanister4" parent="." instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 287.355, 72.8683, 226.234 )

[node name="BlueCanister2" parent="." instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 303.683, 74.7801, 213.08 )

[node name="BlueCanister3" parent="." instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 306.475, 76.2697, 228.249 )

[node name="BubbleManager" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 311.155, 76.7789, 232.026 )
script = ExtResource( 13 )

[node name="BubbleMesh" type="MeshInstance" parent="BubbleManager"]
mesh = SubResource( 5 )
material/0 = null
[connection signal="greenCanisterCollected" from="GreenCanister" to="Control/GreenCounter" method="_on_GreenCanister_collected"]
[connection signal="greenCanisterCollected" from="GreenCanister2" to="Control/GreenCounter" method="_on_GreenCanister_collected"]
[connection signal="greenCanisterCollected" from="GreenCanister3" to="Control/GreenCounter" method="_on_GreenCanister_collected"]
[connection signal="greenCanisterCollected" from="GreenCanister4" to="Control/GreenCounter" method="_on_GreenCanister_collected"]
[connection signal="greenCanisterCollected" from="GreenCanister5" to="Control/GreenCounter" method="_on_GreenCanister_collected"]
[connection signal="numGreenCanistersCollected" from="Control/GreenCounter" to="GreenMarker" method="_on_GreenCounter_numGreenCanistersCollected"]
[connection signal="numGreenCanistersCollected" from="Control/GreenCounter" to="GreenMarker2" method="_on_GreenCounter_numGreenCanistersCollected"]
[connection signal="numGreenCanistersCollected" from="Control/GreenCounter" to="GreenMarker4" method="_on_GreenCounter_numGreenCanistersCollected"]
[connection signal="numGreenCanistersCollected" from="Control/GreenCounter" to="GreenMarker5" method="_on_GreenCounter_numGreenCanistersCollected"]
[connection signal="numGreenCanistersCollected" from="Control/GreenCounter" to="GreenMarker3" method="_on_GreenCounter_numGreenCanistersCollected"]
[connection signal="numBlueCanistersCollected" from="Control2/BlueCounter" to="GreenMarker" method="_on_BlueCounter_numBlueCanistersCollected"]
[connection signal="numBlueCanistersCollected" from="Control2/BlueCounter" to="GreenMarker2" method="_on_BlueCounter_numBlueCanistersCollected"]
[connection signal="numBlueCanistersCollected" from="Control2/BlueCounter" to="GreenMarker4" method="_on_BlueCounter_numBlueCanistersCollected"]
[connection signal="numBlueCanistersCollected" from="Control2/BlueCounter" to="GreenMarker5" method="_on_BlueCounter_numBlueCanistersCollected"]
[connection signal="numBlueCanistersCollected" from="Control2/BlueCounter" to="GreenMarker3" method="_on_BlueCounter_numBlueCanistersCollected"]
[connection signal="blueCanisterPlaced" from="GreenMarker" to="Control2/BlueCounter" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarker" to="AudioManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarker" to="BubbleManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarker" to="Control/GreenCounter" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarker" to="AudioManager" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarker" to="BubbleManager" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarker2" to="Control2/BlueCounter" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarker2" to="AudioManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarker2" to="BubbleManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarker2" to="Control/GreenCounter" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarker2" to="AudioManager" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarker2" to="BubbleManager" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarker3" to="Control2/BlueCounter" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarker3" to="AudioManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarker3" to="BubbleManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarker3" to="Control/GreenCounter" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarker3" to="AudioManager" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarker3" to="BubbleManager" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarker4" to="Control2/BlueCounter" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarker4" to="AudioManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarker4" to="BubbleManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarker4" to="Control/GreenCounter" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarker4" to="AudioManager" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarker4" to="BubbleManager" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarker5" to="Control2/BlueCounter" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarker5" to="AudioManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="blueCanisterPlaced" from="GreenMarker5" to="BubbleManager" method="_on_GreenMarker_blueCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarker5" to="Control/GreenCounter" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarker5" to="AudioManager" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="greenCanisterPlaced" from="GreenMarker5" to="BubbleManager" method="_on_GreenMarker_greenCanisterPlaced"]
[connection signal="blueCanisterCollected" from="BlueCanister" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanister15" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanister14" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanister13" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanister12" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanister11" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanister10" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanister9" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanister8" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanister7" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanister6" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanister5" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanister4" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanister2" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
[connection signal="blueCanisterCollected" from="BlueCanister3" to="Control2/BlueCounter" method="_on_BlueCanister_blueCanisterCollected"]
